# alpha-visualizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  THIRDPARTY_LICENSES.txt  cliff.toml  lighthouserc.json  pyproject.toml  release.sh
.agents/skills/source-command-audit-licenses/: SKILL.md
.agents/skills/source-command-pre-release/: SKILL.md
.claude/commands/: audit-licenses.md  pre-release.md
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_ja.yml  config.yml  feature_request.yml  feature_request_ja.yml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  lighthouse.yml  release.yml
docs/: lighthouse-ci.md
docs/adr/: 0001-pages-vs-screens.md  0002-charts-visx-vs-components.md  0003-openapi-typescript-codegen.md  0004-condition-node-discriminated-union.md
frontend/: .gitignore  .npmrc  .size-limit.json  CLAUDE.md  README.md  THIRDPARTY_FONTS.md  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  playwright.samples.config.ts  playwright.screenshots.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/fixtures/: README.md
frontend/e2e/helpers/: locators.ts
frontend/e2e/samples/: sample-fixture.spec.ts
frontend/e2e/screenshots/: capture.spec.ts  equity-tv.spec.ts  strategy-signal-tv.spec.ts
frontend/e2e/specs/: browse.spec.ts  compare.spec.ts  detail.spec.ts  i18n.spec.ts  share.spec.ts
frontend/e2e/visual/: README.md  tv-charts.spec.ts
frontend/src/: App.tsx  main.tsx  router.tsx  test-setup.ts
frontend/src/api/: client.ts  types.gen.ts  types.ts
frontend/src/components/: AppFooter.tsx  AppNav.tsx  CommandPalette.tsx  DetailToolbar.tsx  MetricsSummaryBar.tsx  MetricsSummaryBarV2.stories.tsx  MetricsSummaryBarV2.tsx  RootLayout.tsx  RunLogDetails.tsx  SettingsToggles.tsx  ShareCardButton.tsx  Sidebar.tsx  StrategyHero.tsx  TopBar.tsx  VariationBadge.tsx  common.tsx
frontend/src/constants/: featureFlags.ts  runSource.ts
frontend/src/contexts/: DashboardContext.tsx  dashboardConstants.ts
frontend/src/design/: a11y.css  tokens.css  useChartTheme.ts
frontend/src/hooks/: useBacktestData.ts  useDebounce.ts  useDocumentTitle.ts  useEquityViewport.ts  useFetchByKey.ts  useIdeasList.ts  useJobRunner.ts  useLiveAvailability.ts  useLiveList.ts  useRecentStrategies.ts  useScrollRestoration.ts  useSparklineCache.ts  useStrategyHistorical.ts  useStrategyList.ts  useSymbolStats.ts  useSyncedTimeRange.ts  useTheme.ts
frontend/src/i18n/: strings.ts
frontend/src/lib/: assetClass.ts  bestSharpe.ts  correlation.ts  csv.ts  distribution.ts  drawdown.ts  errorMessage.ts  exportPng.ts  format.ts  metricLabel.ts  monteCarlo.ts  optimizeHeatmap.ts  rolling.ts  searchParams.ts  searchStrategies.ts  shareCard.ts  shareTweet.ts  walkForward.ts  weekday.ts
frontend/src/mock/: btData.ts
frontend/src/pages/: BrowsePage.tsx  ComparePage.tsx  DetailPage.tsx  IdeasPage.tsx  LivePage.tsx
frontend/src/screens/: BacktestScreen.stories.tsx  BacktestScreen.tsx  BrowseScreen.tsx  CompareScreen.stories.tsx  CompareScreen.tsx  ISOOSScreen.tsx  IdeasScreen.stories.tsx  IdeasScreen.tsx  LiveScreen.stories.tsx  LiveScreen.tsx  OptimizeScreen.stories.tsx  OptimizeScreen.tsx  StrategyScreen.tsx  WFOScreen.stories.tsx  WFOScreen.tsx
frontend/src/styles/: tokens.css
samples/: README.en.md  README.md  __init__.py  build_samples.py
samples/_generators/: __init__.py  compatibility_matrix.py  ideas_defs.py  pseudo_backtest.py  pseudo_grid.py  pseudo_wfo.py  strategy_defs.py  synthetic_ohlcv.py  writers.py
samples/sample-forge/: forge.yaml
scripts/: compare_sqlite_dump.py  generate_openapi.py  generate_thirdparty_js.py  verify_build_artifacts.py
src/alpha_visualizer/: __init__.py  app.py  cli.py  db.py  dependencies.py  errors.py  forge_config.py  log_sanitize.py
src/alpha_visualizer/repositories/: backtest_results.py  ideas.py  live.py  optimization.py  strategies.py
src/alpha_visualizer/routers/: historical.py  ideas.py  jobs.py  live.py  optimize.py  results.py  run.py  strategies.py  wfo.py
src/alpha_visualizer/schemas/: __init__.py  (+7 more)
tests/: conftest.py  factories.py  test_app.py  test_cli.py  test_compare_sqlite_dump.py  test_db.py  test_dependencies.py  test_errors.py  test_forge_config.py  test_log_sanitize.py  test_routers.py
tests/fixtures/: build_e2e_fixture.py
tests/repositories/: test_backtest_results_repo.py  test_ideas_reader.py  test_live_repo.py  test_optimization_repo.py  test_strategies_repo.py
tests/routers/: test_db_mode_write_paths.py  test_forge_yaml_integration.py  test_historical.py  test_ideas.py  test_jobs.py  test_live.py  test_optimize.py  test_results.py  test_run.py  test_strategies.py  test_strategies_source.py  test_strategy_duplicate.py  test_strategy_save.py  test_wfo.py
tests/samples/: test_pseudo_backtest.py  test_pseudo_grid.py  test_pseudo_wfo.py  test_sample_forge.py  test_strategy_defs.py  test_synthetic_ohlcv.py  test_writers.py
tests/schemas/: test_schemas.py
tests/services/: test_backtest.py  test_backtest_properties.py  test_historical.py  test_jobs.py  test_live.py  test_tuning.py  test_wfo.py
visualizer/: package-lock.json  package.json
visualizer/src/: main.tsx
(+315 files in other folders)
