[project]
name = "alpha-visualizer"
version = "0.3.0"
description = "Web visualization tool for AlphaForge backtest results"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "alforge-labs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alforge-labs/alpha-visualizer"
Repository = "https://github.com/alforge-labs/alpha-visualizer"
Documentation = "https://alforgelabs.com/ja/docs/alpha-visualizer/"
Issues = "https://github.com/alforge-labs/alpha-visualizer/issues"
Changelog = "https://github.com/alforge-labs/alpha-visualizer/blob/main/CHANGELOG.md"

[project.scripts]
alpha-vis = "alpha_visualizer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_visualizer"]

# OSS 同梱サンプル forge_dir を wheel に含める。
# `alpha-vis serve --use-bundled-samples` または
# `alpha_visualizer/samples/sample-forge` 経由でアクセス可能になる。
[tool.hatch.build.targets.wheel.force-include]
"samples/sample-forge" = "alpha_visualizer/samples/sample-forge"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "bump-my-version>=0.32.0",
    "httpx>=0.28.1",
    "hypothesis>=6.152.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
message = "chore: バージョン {new_version} にバンプ"
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/alpha_visualizer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
